--- a/100道练习题.ipynb
+++ b/100道练习题.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "fd3e535c",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f9961122",
    "metadata": {},
    "outputs": [
@@ -38,13 +38,12 @@
    "source": [
     "import pandas as pd\n",
     "d={'x':100,'y':200,'z':300}\n",
-    "s1=\n",
     "print(d[\"x\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1e7374eb",
    "metadata": {},
    "outputs": [
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "545325e0",
    "metadata": {},
    "outputs": [
@@ -131,8 +130,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "eefc9b4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gj71u4o/cp312-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\n",
+      "    lib directory: C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gj71u4o/cp312-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\n",
+      "    name: scipy-openblas\n",
+      "    openblas configuration: OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY\n",
+      "      Haswell MAX_THREADS=24\n",
+      "    pc file directory: D:/a/numpy/numpy/.openblas\n",
+      "    version: 0.3.28\n",
+      "  lapack:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gj71u4o/cp312-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\n",
+      "    lib directory: C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gj71u4o/cp312-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\n",
+      "    name: scipy-openblas\n",
+      "    openblas configuration: OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY\n",
+      "      Haswell MAX_THREADS=24\n",
+      "    pc file directory: D:/a/numpy/numpy/.openblas\n",
+      "    version: 0.3.28\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30158\n",
+      "  c++:\n",
+      "    commands: cl\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30158\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.12\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\Users\\runneradmin\\AppData\\Local\\Temp\\build-env-_nerfvh_\\Scripts\\python.exe\n",
+      "  version: '3.12'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  not found:\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.__version__)\n",
+    "np.show_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d8c069a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.zeros(10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ea0947f5",
    "metadata": {},
    "outputs": [
     {
@@ -143,19 +254,22 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "data=np.zeros((10,10))\n",
+    "print(\"%d bytes\"%(data.size*data.itemsize))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "d8c069a5",
+   "execution_count": 19,
+   "id": "a05e46aa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "add(x1, x2, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature, extobj])\n",
+      "add(x1, x2, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature])\n",
       "\n",
       "Add arguments element-wise.\n",
       "\n",
@@ -193,6 +307,7 @@
       "\n",
       "Examples\n",
       "--------\n",
+      ">>> import numpy as np\n",
       ">>> np.add(1.0, 4.0)\n",
       "5.0\n",
       ">>> x1 = np.arange(9.0).reshape((3, 3))\n",
@@ -213,28 +328,108 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "np.info(np.add)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ea0947f5",
+   "execution_count": 20,
+   "id": "ece96a5b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n"
+      "zeros(shape, dtype=float, order='C', *, like=None)\n",
+      "\n",
+      "Return a new array of given shape and type, filled with zeros.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "shape : int or tuple of ints\n",
+      "    Shape of the new array, e.g., ``(2, 3)`` or ``2``.\n",
+      "dtype : data-type, optional\n",
+      "    The desired data-type for the array, e.g., `numpy.int8`.  Default is\n",
+      "    `numpy.float64`.\n",
+      "order : {'C', 'F'}, optional, default: 'C'\n",
+      "    Whether to store multi-dimensional data in row-major\n",
+      "    (C-style) or column-major (Fortran-style) order in\n",
+      "    memory.\n",
+      "like : array_like, optional\n",
+      "    Reference object to allow the creation of arrays which are not\n",
+      "    NumPy arrays. If an array-like passed in as ``like`` supports\n",
+      "    the ``__array_function__`` protocol, the result will be defined\n",
+      "    by it. In this case, it ensures the creation of an array object\n",
+      "    compatible with that passed in via this argument.\n",
+      "\n",
+      "    .. versionadded:: 1.20.0\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "out : ndarray\n",
+      "    Array of zeros with the given shape, dtype, and order.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "zeros_like : Return an array of zeros with shape and type of input.\n",
+      "empty : Return a new uninitialized array.\n",
+      "ones : Return a new array setting values to one.\n",
+      "full : Return a new array of given shape filled with value.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> import numpy as np\n",
+      ">>> np.zeros(5)\n",
+      "array([ 0.,  0.,  0.,  0.,  0.])\n",
+      "\n",
+      ">>> np.zeros((5,), dtype=int)\n",
+      "array([0, 0, 0, 0, 0])\n",
+      "\n",
+      ">>> np.zeros((2, 1))\n",
+      "array([[ 0.],\n",
+      "       [ 0.]])\n",
+      "\n",
+      ">>> s = (2,2)\n",
+      ">>> np.zeros(s)\n",
+      "array([[ 0.,  0.],\n",
+      "       [ 0.,  0.]])\n",
+      "\n",
+      ">>> np.zeros((2,), dtype=[('x', 'i4'), ('y', 'i4')]) # custom dtype\n",
+      "array([(0, 0), (0, 0)],\n",
+      "      dtype=[('x', '<i4'), ('y', '<i4')])\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "np.info(np.zeros)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "a05e46aa",
+   "execution_count": 23,
+   "id": "f41d763f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b= np.zeros(10)\n",
+    "b[4]=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d647221e",
    "metadata": {},
    "outputs": [
     {
@@ -246,30 +441,37 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "data=np.arange(10,50)\n",
+    "print(data)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "ece96a5b",
+   "execution_count": 33,
+   "id": "d236593f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[49 48 47 46 45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 29 28 27 26\n",
-      " 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10  9  8  7  6  5  4  3  2\n",
-      "  1  0]\n"
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "data1=np.arange(50)\n",
+    "data1=data[::-1]\n",
+    "print(data1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f41d763f",
+   "id": "50550a3e",
    "metadata": {},
    "outputs": [
     {
@@ -282,49 +484,37 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "data=np.arange(9).reshape(3,3)\n",
+    "print(data)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d647221e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1 2]\n",
-      " [3 4 5]\n",
-      " [6 7 8]]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "d236593f",
+   "id": "bdeb78a2-4569-4fff-9813-f1caa942fe24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0, 1, 4], dtype=int64),)"
+       "(array([0, 1, 4]),)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "nz=np.nonzero([1,2,0,0,4,0])\n",
+    "nz"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "50550a3e",
+   "execution_count": 44,
+   "id": "b176d7fb",
    "metadata": {},
    "outputs": [
     {
@@ -335,41 +525,15 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "b176d7fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[0.19088387, 0.35259672, 0.27238784],\n",
-       "        [0.55919469, 0.30752507, 0.26078981],\n",
-       "        [0.8552263 , 0.99741821, 0.91202211]],\n",
-       "\n",
-       "       [[0.03924192, 0.47042925, 0.32653825],\n",
-       "        [0.25838202, 0.83548537, 0.15423674],\n",
-       "        [0.88396049, 0.39074961, 0.20280933]],\n",
-       "\n",
-       "       [[0.86688832, 0.06347097, 0.65496387],\n",
-       "        [0.94233374, 0.79778621, 0.6035265 ],\n",
-       "        [0.65247629, 0.11952257, 0.21868683]]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "data=np.eye(3)\n",
+    "data"
+   ]
   }
  ],
  "metadata": {
@@ -388,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8rc1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
