--- a/Pandas数据分析从入门到实战（2025最新版）.ipynb
+++ b/Pandas数据分析从入门到实战（2025最新版）.ipynb
@@ -1037,14 +1037,193 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe5395cb-8a28-4ffe-8440-612d2b104090",
+   "cell_type": "markdown",
+   "id": "9a9f4977-8f36-4ee9-9fa2-ed3a4f33a2c9",
    "metadata": {},
-   "outputs": [],
    "source": [
     "s2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d353b76-b4fc-43d9-ab2c-fdd0dd536580",
+   "metadata": {},
+   "source": [
+    "1.3 使用python 字典创建Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "908459f7-80cd-4c47-b1c2-e459db6d7766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdata={'0hio':35000,'Texas':72000,'Oregon':16000,'Utah':5000}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "20367cd8-de82-4ee6-a35a-1941da80e1c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3=pd.Series(sdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "61d46e82-762a-4eb3-9535-295a87c080f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0hio      35000\n",
+       "Texas     72000\n",
+       "Oregon    16000\n",
+       "Utah       5000\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6461dd0a-72ba-450f-b378-4f36c37ef00a",
+   "metadata": {},
+   "source": [
+    "1.4 根据标签索引查询数据\n",
+    "类似python的字典dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "976c4e61-4280-4143-bba8-0986912e4f55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "d      1\n",
+       "b      a\n",
+       "a    5.2\n",
+       "c      7\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "eaed7f3c-8317-4dd1-a163-3bc8fd8367e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.2"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "5a726f69-28e7-492f-abca-ffa0baefc31e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s2['a'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "6335ae0d-488b-4138-9846-b7bec2255896",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b      a\n",
+       "a    5.2\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2[['b','a']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "4a440d67-7d43-4a6a-b3c0-798f3ce18df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s2[['b','a']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f284639-27cc-4087-8c6b-373882334520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
